--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "name": "seungha_kong_optile",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.9.0",
+    "node": "12.4.0"
+  },
   "dependencies": {
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
